--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -2,7 +2,7 @@
 	"SNAPCAST":{
 	"SNAPCASTCONF":"SnapCast Configuration",
 	"SERVER":"SnapServer settings",	
-	"D_SERVER":"Configure the basic server settings; such as sound quality, codec and stream name for the MPD playback.<br />Note: if defaults are not changed, no CLI comments are added for those settings.",	
+	"D_SERVER":"Configure the basic server settings; such as sound quality, codec and stream name for the MPD playback.<br>Note: if defaults are not changed, no CLI comments are added for those settings.",	
 		"SERVER_ENABLED":"Enable SnapServer",
 		"D_SERVER_ENABLED":"En- or disable the SnapServer",
 		"MAIN_PIPE_NAME":"Name of the main stream",
@@ -32,7 +32,7 @@
 		"HOSTID":"SnapCast client host ID",
 		"D_HOSTID":"Define a SnapCast host by filling in its ID.",
 	"CLI": "Additional CLI commands",
-	"D_CLI": "This field allows you to add CLI commands to your setup.<br />You can find the commands here: https://github.com/badaix/snapcast#Configuration",
+	"D_CLI": "This field allows you to add CLI commands to your setup.<br>You can find the commands here: https://github.com/badaix/snapcast#Configuration",
 	"DD_CLI": "The CLI commands will be appended to the config. In the case of leading spaces, prefix the string with a backslash (\\).",
 	"MPD":"MPD settings",
 	"D_MPD":"Configure MPD output for synchronized playback and set the correct sound quality. 48kHz @ 16 bits over two channels is advised and allows for flawless playback.",
